Corrigiendo falla en clone. No terminado

--- a/test.html
+++ b/test.html
@@ -13,6 +13,14 @@
     <h1>Test</h1>
     <script>
 
+
+        let b1 = KButton("Hola mundo");
+        b1.publish();
+
+        let b2 = b1.clone();
+        b2.publish();
+
+
         let row = KLayer(
             KButton("Hello World").addEvent("click", () => console.log("Hello World")),
             KText("Hello World"),
@@ -20,8 +28,12 @@
             KRange()
         ).addCssTextToChildren("display: inline-block").publish();
 
-        let row2 = row.clone(KicsyVisualContainerComponent);
+        let row2 = row.clone();
+        console.log(row2);
+
         row2.publish();
+
+
 
     </script>
 </body>
