Animation by callbacks

--- a/test.html
+++ b/test.html
@@ -62,7 +62,8 @@
                     .publish();
         */
 
-        let a1 = new KApplicationClass("App1", "PP", ["system"], KWindow("Test").setSize(600, 500)).register();
+
+        let a1 = new KApplicationClass("App1", "PP", ["system"], a1rootView).register();
 
         let a2 = new KApplicationClass("App2", "PP", ["system"], KWindow("Test").setSize(600, 500)).register();
 
