--- a/test2.html
+++ b/test2.html
@@ -9,18 +9,29 @@
 
 </head>
 
+<style>
+    .estrella {
+        position: relative;
+        display: block;
+        width: 5px;
+        height: 5px;
+        background-color: white;
+        border-radius: 50%;
+        left: 100px;
+        top: 100px;
+    }
+</style>
 
 <body>
 
-    <div style="display: block; position: absolute; width: 400px; height: 400px; border:1px solid;" id="box"></div>
-    <script>
-        let b = document.getElementById("box");
+    <div style="width: 400px; height: 400px; background:linear-gradient(red,blue);">
 
-        b.style.cssText += "background: radial-gradient(circle at center bottom, navy 0%, black 100%);";
-
-
-
-    </script>
+        <div class="estrella"></div>
+        <div class="estrella"></div>
+        <div class="estrella"></div>
+        <div class="estrella"></div>
+        <div class="estrella"></div>
+    </div>
 
 
 
